--- a/app/crearEventos/crearEventos.html
+++ b/app/crearEventos/crearEventos.html
@@ -295,7 +295,7 @@
                 <div class=" mdl-cell--4-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                     <input class="mdl-textfield__input" required="required" type="number"
                            ng-model="servicioEvent.cantidad" placeholder="cantidad" id="cantidad">
-                    <label class="mdl-textfield__label" for="cantidad"></label>
+                    <label class="mdl-textfield__label" for="Cantidad"></label>
                 </div>
 
                 <div class=" mdl-cell--4-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
