--- a/app/createRrpp/createRrpp.html
+++ b/app/createRrpp/createRrpp.html
@@ -14,6 +14,10 @@
         <input  required  type="email" class="mdl-textfield__input"   id="correo">
     </md-input-container>
     <br>
+    <md-input-container class="mdl-cell mdl-cell--4-col mdl-cell--12-col-phone">
+        <label>www.izinait.com/app/#!/rrpp#NICKNAME</label>
+        <input  required  type="text" class="mdl-textfield__input"   id="nickName">
+    </md-input-container>
 
 
     <br>
