--- a/app/eventos/eventos.html
+++ b/app/eventos/eventos.html
@@ -26,7 +26,7 @@
 	<div class="mdl-grid">
 
 	<div class="event  mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--12-col-phone"
-		 ng-repeat="event in events | orderBy:'-date' " ng-click="goToEventDetails(event)">
+		 ng-repeat="event in events  " ng-click="goToEventDetails(event)">
 
 
 		<div class="">
