--- a/app/eventos/eventos.html
+++ b/app/eventos/eventos.html
@@ -68,11 +68,14 @@
 								</i>
 						</div>
 
-						<button class="mdl-cell mdl-cell--5-col mdl-cell--12-col-phone mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect "
+						<button class="mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect "
 								ng-click="redirectToEvent($index)" >Informe</button>
 
-						<button class="mdl-cell mdl-cell--5-col mdl-cell--12-col-phone mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect "
+						<button class=" mdl-cell--4-col mdl-cell--12-col-phone mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect "
 								ng-click="duplicateEvent($index)">Duplicar</button>
+
+						<a class="mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect "
+								href="http://izinait.com/app/#!/detalleEvento?id={{event.$id}}">Ver</a>
 
 					<!--	<div class="j2">
 							<i class="material-icons" style="vertical-align: middle;">music_note</i>
