--- a/app/rrpps/rrpps.html
+++ b/app/rrpps/rrpps.html
@@ -34,7 +34,7 @@
                 </i></td>
             <td>{{rrpp.name}}</td>
             <td>{{rrpp.email}}</td>
-            <td><a href="http://www.izinait.com/user/app/rrpp#{{rrpp.nickName}}">www.izinait.com/user/app/rrpp#{{rrpp.nickName}}</a> </td>
+            <td><a href="http://izinait.com/app/#!/rrpp#{{rrpp.nickName}}">http://izinait.com/app/#!/rrpp#{{rrpp.nickName}}</a> </td>
 
 
 
