--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 
 <div class="login-wrap">
     <div class="login-html">
-        <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Ingresar</label>
-        <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab"></label>
+
+        <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab"> <font color="white"> Ingresar </font></label>
+        <input id="tab-2" type="radio" name="tab" class="sign-up" ><label for="tab-2" class="tab">
+        <font color="white"> Registrarse</font></label>
+
         <div class="login-form">
+
             <div class="sign-in-htm">
                 <div class="group">
                     <label for="correo" class="label">Correo</label>
@@ -47,7 +51,7 @@
                 </div>
                 <div class="hr"></div>
                 <div class="foot-lnk">
-                    <a href="#forgot"> Perdiste tu contraseña?</a>
+                    <a  href="#forgot"> Perdiste tu contraseña?</a>
                 </div>
             </div>
             <div class="sign-up-htm">
